@@ -65,11 +65,15 @@ extern struct font_head * cur_font;     // actual font (VDI)
 
 extern UWORD font_count;                // all three fonts and NULL
 
+/*
+ * font_ring is a struct of four pointers, each of which points to
+ * a list of font headers linked together to form a string.
+ */
 struct  {
-    struct font_head *first_list;
-    struct font_head *second_list;
-    struct font_head *gdos_list;
-    struct font_head *null_list;
+    struct font_head *first_list;       /* list of system fonts */
+    struct font_head *second_list;      /* list of system fonts */
+    struct font_head *gdos_list;        /* list of gdos fonts */
+    struct font_head *null_list;        /* termination - always 0 */
 } font_ring;
 
 
