@@ -554,3 +554,4 @@ Start... early ages
 - fixed some functino prototypes in bios.c (LVL)
 - removed cli/Makefile (LVL)
 - implemented the font_ring as 3 lists of linked fontheaders (MAD)
+- documented all tosvars in bios/tosvar.h till 0x5b0 (MAD)
